[gd_scene load_steps=4 format=2]

[ext_resource path="res://instances/players/player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.5, 20 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -32, -64 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( 16, 64 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3
__meta__ = {
"_edit_lock_": true
}

[node name="PushDetector" type="Area2D" parent="."]
position = Vector2( 16, 32 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushDetector"]
position = Vector2( 0.5, 12 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 32 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="CollisionShape2D"]
position = Vector2( -1, 15.6159 )
scale = Vector2( 1.5, 1.984 )
polygon = PoolVector2Array( -10, -24, -10, 8.25812, 11.3333, 8.25812, 11.3333, -24 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timers" type="Node" parent="."]

[node name="JumpTime" type="Timer" parent="Timers"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -24, -12 )
current = true

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = -25.0
margin_right = 50.0
margin_bottom = -11.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timers/JumpTime" to="." method="_on_JumpTime_timeout"]
